@@ -2166,13 +2166,16 @@ conditions are simply reported."
 printing."
   (let ((*print-pretty* t) (*print-right-margin* 65)
         (*print-length* 1000) (*print-level* 200))
-    (handler-case
-        (funcall *sldb-condition-printer* condition)
-      (error (cond)
-        ;; Beware of recursive errors in printing, so only use the condition
-        ;; if it is printable itself:
-        (format nil "Unable to display error condition~@[: ~A~]"
-                (ignore-errors (princ-to-string cond)))))))
+    (truncate-string
+     (handler-case
+         (funcall *sldb-condition-printer* condition)
+       (error (cond)
+         ;; Beware of recursive errors in printing, so only use the condition
+         ;; if it is printable itself:
+         (format nil "Unable to display error condition~@[: ~A~]"
+                 (ignore-errors (princ-to-string cond)))))
+     (ash 1 16)
+     "...")))
 
 (defun debugger-condition-for-emacs ()
   (list (safe-condition-message *swank-debugger-condition*)
